# toolspec-library

./: README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
pages/: index.html
specs/bcftools/bcftools-filter/: spec.yaml  tests.yaml
specs/bcftools/bcftools-norm/: spec.yaml  tests.yaml
specs/bwa-mem2/bwa-mem2-index/: spec.yaml  tests.yaml
specs/bwa-mem2/bwa-mem2-mem/: spec.yaml  tests.yaml
specs/gatk/gatk-genotypegvcfs/: spec.yaml  tests.yaml
specs/gatk/gatk-haplotypecaller/: spec.yaml  tests.yaml
specs/htslib/bgzip/: spec.yaml
specs/rtg-tools/rtg-format/: spec.yaml  tests.yaml
specs/rtg-tools/rtg-vcfeval/: spec.yaml  tests.yaml
specs/samtools/samtools-dict/: spec.yaml  tests.yaml
specs/samtools/samtools-faidx/: spec.yaml  tests.yaml
specs/samtools/samtools-flagstat/: spec.yaml  tests.yaml
specs/samtools/samtools-index/: spec.yaml  tests.yaml
specs/samtools/samtools-sort/: spec.yaml  tests.yaml
tests/: conftest.py
