[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioledger-toolspec-library"
version = "0.1.0"
description = "Curated collection of tool spec YAMLs for BioLedger"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
