[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioledger-toolspec-library"
version = "0.1.0"
description = "Curated collection of tool spec YAMLs for BioLedger"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "jinja2>=3.1",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
# This repo ships YAML assets + tests, not an importable package. Allow
# hatchling to build a contentless wheel so `pip install -e .[dev]` works.
bypass-selection = true

[tool.pytest.ini_options]
testpaths = ["specs"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
